# genai-tools-adhoc

./: pyproject.toml
src/genai_tools/drtools/clients/: milvus.py
